updated landing page

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,4 +70,8 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+
+  ::selection {
+    @apply bg-violet-800/80 text-primary-foreground;
+  }
 }
